# hyperparam-pathology-agent

./: .gitignore  README.md  hparam_report.md  pyproject.toml
examples/: sample_results.csv
src/hyperparam_pathology/: crew.py  main.py  mcp_server.py
src/hyperparam_pathology/config/: agents.yaml  tasks.yaml
src/hyperparam_pathology/core/: detectors.py  summarizer.py
