[project]
name = "hyperparam_pathology"
version = "0.1.0"
description = "hyperparam_pathology using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0",
    "litellm>=1.80.7",
    "mcp[cli]>=1.22.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[project.scripts]
hyperparam_pathology = "hyperparam_pathology.main:run"
run_crew = "hyperparam_pathology.main:run"
train = "hyperparam_pathology.main:train"
replay = "hyperparam_pathology.main:replay"
test = "hyperparam_pathology.main:test"
run_with_trigger = "hyperparam_pathology.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
